syntax = "proto3";

package lab3;

message Task {
    int32 id = 1;
    int32 version = 2;
    string title = 3;
    string description =4;
    string status_id = 5;
    string user_id = 6;
    string created_at = 7;
}

message TaskComment {
    int32 id = 1;
    int32 version = 2;
    string content = 3;
    string created_at = 4;
}

message User {
    int32 id = 1;
    string name = 2;
}
